# GLabs

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  ]  imgui.ini
glsl/: basic_vert.glsl  cube_frag.glsl  cube_vert.glsl  flat_frag.glsl  flat_vert.glsl  frag.glsl  lab1_fragment1.glsl  lab1_fragment2.glsl  lab1_fragment3.glsl  lab1_vertex.glsl  model_frag.glsl  model_vert.glsl  mvp_frag.glsl  mvp_vert.glsl  ngon_frag.glsl  ngon_vert.glsl  randclr_frag.glsl  random_color_vert.glsl  texture_fragment.glsl  texture_vertex.glsl  tone_frag.glsl  triangle_fragment.glsl  triangle_vertex.glsl  vert.glsl
src/glabs/: main.cpp  pch.hpp
src/glabs/app/: app.hpp  app_config.hpp  app_configurator.cpp  app_configurator.hpp  app_container.cpp  app_container.hpp  basic_app.cpp  basic_app.hpp  imgui_app_config.cpp  imgui_app_config.hpp  window_app_config.cpp  window_app_config.hpp
src/glabs/application/: lab1_application.cpp  lab1_application.hpp  lab2_application.cpp  lab2_application.hpp  lab_task.hpp  lab_task_draw_first_shape.cpp  lab_task_draw_first_shape.hpp  lab_task_draw_ngon.cpp  lab_task_draw_ngon.hpp  lab_task_draw_ngon_triangle_fan.cpp  lab_task_draw_ngon_triangle_fan.hpp  lab_task_draw_second_shape_line_strip.cpp  lab_task_draw_second_shape_line_strip.hpp  lab_task_draw_second_shape_triangles.cpp  lab_task_draw_second_shape_triangles.hpp  lab_task_draw_third_shape.cpp  lab_task_draw_third_shape.hpp  shape_math.cpp  shape_math.hpp  texture_application.cpp  texture_application.hpp  triangle_application.cpp  triangle_application.hpp
src/glabs/graphics/: glfw_life.cpp  glfw_life.hpp  image2d.cpp  image2d.hpp  ogl_buffer.cpp  ogl_buffer.hpp  ogl_buffers.cpp  ogl_buffers.hpp  ogl_debug_output.hpp  ogl_framebuffer.cpp  ogl_framebuffer.hpp  ogl_geometry_input.cpp  ogl_geometry_input.hpp  ogl_program_pipeline.cpp  ogl_program_pipeline.hpp  ogl_shader_program.cpp  ogl_shader_program.hpp  ogl_texture2d.cpp  ogl_texture2d.hpp  window.cpp  window.hpp
src/glabs/lab3/: lab3app.cpp  lab3app.hpp  task.hpp  task1.cpp  task1.hpp  task2.cpp  task2.hpp  task3.cpp  task3.hpp
src/glabs/lab4/: lab4app.cpp  lab4app.hpp  task.hpp  task1.cpp  task1.hpp  task3.cpp  task3.hpp
src/glabs/rendering/: camera.cpp  camera.hpp  camera2.cpp  camera2.hpp  dear_imgui.cpp  dear_imgui.hpp  frame_timer.cpp  frame_timer.hpp  mesh.cpp  mesh.hpp  mesh2.cpp  mesh2.hpp  mesh_attribute.cpp  mesh_attribute.hpp  obj_importer.cpp  obj_importer.hpp  shader_library.cpp  shader_library.hpp  sub_mesh.cpp  sub_mesh.hpp
